Adapt to DCSA V3 data model
